resolved all gradle and pdf export issue.