@@ -1,19 +1,17 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
+//apply plugin: 'kotlin-kapt'
 //apply plugin: 'kotlin-android-extensions'
 //apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.prabhat1707'
+group='com.example.easywaylocation'
 android {
+    namespace 'com.example.easywaylocation'
     compileSdkVersion 35
 
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 33
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        minSdkVersion 23
+        targetSdkVersion 35
     }
 
     buildTypes {
@@ -23,25 +21,42 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
-    namespace 'com.example.easywaylocation'
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_17.toString()
+    }
 }
+
+//tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
+//    kotlinOptions {
+//        jvmTarget = "17" // Ensure it matches your project's Java version
+//        freeCompilerArgs += [
+//                '--add-exports',
+//                'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+//                '--add-exports',
+//                'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
+//        ]
+//    }
+//}
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
-    implementation 'com.google.android.gms:play-services-location:20.0.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1"
+    implementation 'com.google.android.gms:play-services-maps:19.0.0'
+    implementation 'com.google.android.gms:play-services-location:21.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.1"
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:converter-scalars:2.6.1'
-    implementation "androidx.core:core-ktx:1.8.0"
-   // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.15.0"
+    implementation 'com.facebook.fresco:webpsupport:2.0.0'
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
+  //  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+/*
 repositories {
     mavenCentral()
-}
+}*/
